@@ -1,3 +1,12 @@
+2018-08-10  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* Makefile (clean): remove *.idb files.
+	* dll.c: replace 'extern "C"' with macros PTW32_BEGIN_C_DECLS/PTW32_BEGIN_C_DECLS
+	for consistency tidy-up; add comment re ptw32_autostatic_anchor() function;
+	make our static constructor/destructors "extern" to avoid optimisers.
+	* implement.h (ptw32_autostatic_anchor): add PTW32_BEGIN_C_DECLS/PTW32_BEGIN_C_DECLS
+	envelope.
+
 2018-08-08  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* Makefile: "nmake realclean VC VC-static" and similar wasn't remaking pthread.obj.
